--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>My Webpage!</title>
     </head>
     <body>
-        Hello, world! Online version. thrlid line local. 
-        Again online.
+        Hello, world! Online version. thrlid line local.
+        Again online. one.
     </body>
 </html>
