--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>My Webpage!</title>
     </head>
     <body>
-        Hello, world! Online version. thrid line local.
+        Hello, world! Online version. third line local.
         Again online. one. green.
     </body>
 </html>
